--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: goto-bus-stop/setup-zig@v1
         with:
-          version: 0.9.0
+          version: 0.11.0+f62e3b8
       - run: zig build test
   lint:
     runs-on: ubuntu-latest
@@ -22,5 +22,5 @@ jobs:
       - uses: actions/checkout@v2
       - uses: goto-bus-stop/setup-zig@v1
         with:
-          version: 0.9.0
+          version: 0.11.0+f62e3b8
       - run: zig fmt --check src/*.zig
