--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,5 @@
 name: CI
-on: 
+on:
   push:
   pull_request:
     branches:
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: goto-bus-stop/setup-zig@v2
         with:
-          version: master
+          version: 0.14.0
       - run: zig build test
   lint:
     runs-on: ubuntu-latest
@@ -22,5 +22,5 @@ jobs:
       - uses: actions/checkout@v2
       - uses: goto-bus-stop/setup-zig@v2
         with:
-          version: master
+          version: 0.14.0
       - run: zig fmt --check src/*.zig
